Adds replit HTML to file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<h1>Is this thing working?</h1>
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>My First Web Page</title>
+  <link href="style.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <h1>My First Web Page</h1>
+  <p>Clever content goes here.</p>
+  <div>
+    <ul>
+      <li>Trainspotting</li>
+      <li>John Wick</li>
+      <li>Inception</li>
+    </ul>
+    <ol>
+      <li>The Little Prince</li>
+      <li>The Life of Pi</li>
+      <li>Harry Potter</li>
+      <li>Hunger Games</li>
+    </ol>
+  </div>
+  <script src="script.js"></script>
+</body>
+
+</html>
+
