--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <li>Hunger Games</li>
     </ol>
   </div>
+  <div>
+    <img src="https://picsum.photos/200/300">
+  </div>
   <script src="script.js"></script>
 </body>
 
