Adds text formatting tags

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <div>
     <img src="https://picsum.photos/200/300">
   </div>
+  <div>Here is how we use the <strong>strong</strong> tag.</div>
+  <div>Here is how we use the <em>em</em> tag.</div>
+  <div>Here is how we use the <strike>strike</strike> tag.</div>
   <script src="script.js"></script>
 </body>
 
