Adds link and a span

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
   <div>
     <img src="https://picsum.photos/200/300">
   </div>
+  <div>Pictures provided by <a href="https://picsum.photos" target="_blank">Lorem Picsum</a></div>
   <div>Here is how we use the <strong>strong</strong> tag.</div>
   <div>Here is how we use the <em>em</em> tag.</div>
   <div>Here is how we use the <strike>strike</strike> tag.</div>
+  <div>These words are in a div. <span style="background-color:yellow">These words are in a span.</span></div>
   <script src="script.js"></script>
 </body>
 
