--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
   <div>Here is how we use the <em>em</em> tag.</div>
   <div>Here is how we use the <strike>strike</strike> tag.</div>
   <div>These words are in a div. <span style="background-color:yellow">These words are in a span.</span></div>
+  <div>
+    <table>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+      </tr>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Jill</td>
+        <td>Doe</td>
+        <td>jill@example.com</td>
+      </tr>
+      <tr>
+        <td>Jody</td>
+        <td>Doe</td>
+        <td>jody@example.com</td>
+      </tr>
+    </table>
+  </div>
   <script src="script.js"></script>
 </body>
 
