--- a/index.html
+++ b/index.html
@@ -6,6 +6,39 @@
   <meta name="viewport" content="width=device-width">
   <title>My First Web Page</title>
   <link href="style.css" rel="stylesheet" type="text/css">
+  <style>
+          table.my-table {
+         border-collapse: collapse;
+       }
+
+
+       table.my-table th {
+         background-color: #54585d;
+         color: #ffffff;
+         font-weight: bold;
+         font-size: 13px;
+         border: 1px solid #54585d;
+       }
+
+
+      table.my-table td {
+         padding: 15px;
+       }
+
+     table.my-table td {
+       color: #636363;
+       border: 1px solid #383c3f;
+     }
+
+     table.my-table tr {
+       background-color: #63aaf5;
+     }
+
+     table.my-table tr:nth-child(odd) {
+       background-color: #ffffff;
+     }
+
+  </style>
 </head>
 
 <body>
@@ -33,7 +66,7 @@
   <div>Here is how we use the <strike>strike</strike> tag.</div>
   <div>These words are in a div. <span style="background-color:yellow">These words are in a span.</span></div>
   <div>
-    <table>
+    <table class="my-table">
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
